# crawl-simple-desktop

./: .gitignore  package.py  setup.cfg
wallpapers/: spider.py  test.py
